# mpeghdec

./: .clang-format  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  mpeghdec.pc.in
.github/workflows/: Tagged.yml  Untagged.yml
demo/: CMakeLists.txt
demo/mpeghDecoder/: main_mpeghDecoder.cpp
demo/mpeghUiManager/: interactivityScriptParser.h  main_mpeghUiManager.cpp  mpeghUiManagerProcessor.cpp  mpeghUiManagerProcessor.h
doc/: CMakeLists.txt  Doxyfile.in  mainpage.md
include/: machine_type.h  mpeghUIManager.h  mpeghdecoder.h  mpeghexport.h
include/sys/: genericStds.h  machine_type.h  wav_file.h
src/: CMakeLists.txt  mpeghdec_symbol_prefix.h
src/libArithCoding/: CMakeLists.txt
src/libArithCoding/include/: ac_arith_coder.h
src/libArithCoding/src/: ac_arith_coder.cpp
src/libDRCdec/: CMakeLists.txt
src/libDRCdec/include/: FDK_drcDecLib.h
src/libDRCdec/src/: FDK_drcDecLib.cpp  drcDec_gainDecoder.cpp  drcDec_gainDecoder.h  drcDec_reader.cpp  drcDec_reader.h  drcDec_rom.cpp  drcDec_rom.h  drcDec_selectionProcess.cpp  drcDec_selectionProcess.h  drcDec_tools.cpp  drcDec_tools.h  drcDec_types.h  drcDecoder.h  drcGainDec_init.cpp  drcGainDec_init.h  drcGainDec_multiband.cpp  drcGainDec_multiband.h  drcGainDec_preprocess.cpp  drcGainDec_preprocess.h  drcGainDec_process.cpp  drcGainDec_process.h
src/libDRCdec/src/arm/: drcDec_gainDecoder_arm.cpp
src/libFDK/: CMakeLists.txt
src/libFDK/include/: FDK_archdef.h  FDK_bitbuffer.h  FDK_bitstream.h  FDK_cicp2geometry.h  FDK_core.h  FDK_crc.h  FDK_lpc.h  FDK_matrixCalloc.h  FDK_stftfilterbank_api.h  FDK_tools_rom.h  FDK_trigFcts.h  TD_upsampler.h  abs.h  clz.h  common_fix.h  cplx_mul.h  dct.h  fft.h  fft_rad2.h  fixmadd.h  fixminmax.h  fixmul.h  fixpoint_math.h  mdct.h  rfft.h  scale.h  scramble.h
src/libFDK/include/arm/: FDK_aarch64_neon_funcs.h  FDK_arm_funcs.h  FDK_neon_funcs.h  clz_arm.h  cplx_mul_arm.h  fixmadd_arm.h  fixmul_arm.h  fixpoint_math_arm.h  scale_arm.h  scramble_arm.h
src/libFDK/include/x86/: abs_x86.h  clz_x86.h  fixmul_x86.h  fixpoint_math_x86.h
src/libFDK/src/: FDK_bitbuffer.cpp  FDK_cicp2geometry.cpp  FDK_core.cpp  FDK_crc.cpp  FDK_lpc.cpp  FDK_matrixCalloc.cpp  FDK_stftfilterbank.cpp  FDK_stftfilterbank.h  FDK_stftfilterbank_data.cpp  FDK_stftfilterbank_data.h  FDK_stftfilterbank_process.cpp  FDK_stftfilterbank_process.h  FDK_tools_rom.cpp  FDK_trigFcts.cpp  TD_upsampler.cpp  dct.cpp  fft.cpp  fft_rad2.cpp  fixpoint_math.cpp  mdct.cpp  rfft.cpp  scale.cpp
src/libFDK/src/arm/: FDK_lpc_arm.cpp  FDK_stftfilterbank_process_arm.cpp  TD_upsampler_arm.cpp  dct_arm.cpp  fft_rad2_arm.cpp  fixpoint_math_arm.cpp  mdct_arm.cpp  rfft_arm.cpp  scale_arm.cpp  scale_arm_neon.cpp
src/libFormatConverter/: CMakeLists.txt
src/libFormatConverter/include/: FDK_dmxMatrixParser.h  FDK_formatConverter.h  FDK_formatConverterLib.h  FDK_formatConverter_api.h  FDK_formatConverter_constants.h  FDK_formatConverter_data.h  FDK_formatConverter_init.h  FDK_formatConverter_intern.h  FDK_formatConverter_process.h
src/libFormatConverter/src/: FDK_dmxMatrixParser.cpp  FDK_formatConverter.cpp  FDK_formatConverterLib.cpp  FDK_formatConverter_activeDmx_stft.cpp  FDK_formatConverter_activeDmx_stft.h  FDK_formatConverter_constants.cpp  FDK_formatConverter_constants_stft.cpp  FDK_formatConverter_constants_stft.h  FDK_formatConverter_data.cpp  FDK_formatConverter_init.cpp  FDK_formatConverter_process.cpp
src/libFormatConverter/src/arm/: FDK_formatConverter_activeDmx_stft_arm.cpp
src/libIGFdec/: CMakeLists.txt
src/libIGFdec/include/: FDK_igfDec.h  FDK_igfSCFDecoder.h
src/libIGFdec/src/: FDK_igfDec.cpp  FDK_igfSCFDecoder.cpp
src/libIGFdec/src/arm/: FDK_igfDec_arm.cpp
src/libMpegTPDec/: CMakeLists.txt
src/libMpegTPDec/include/: tp_data.h  tpdec_lib.h
src/libMpegTPDec/src/: tp_version.h  tpdec_asc.cpp  tpdec_asi.cpp  tpdec_lib.cpp
src/libMpeghDec/: CMakeLists.txt
src/libMpeghDec/include/: aacdecoder_lib.h
src/libMpeghDec/src/: FDK_delay.cpp  FDK_delay.h  aac_ram.cpp  aac_ram.h  aac_rom.cpp  aac_rom.h  aacdec_tns.cpp  aacdec_tns.h  aacdecoder.cpp  aacdecoder.h  aacdecoder_lib.cpp  block.cpp  block.h  channel.cpp  channel.h  channelinfo.cpp  channelinfo.h  conceal.cpp  conceal.h  conceal_types.h  deque.cpp  deque.h  fdp.cpp  fdp.h  ltp_post.cpp  ltp_post.h  mct.cpp  mct.h  mpeghdecoder.cpp  overlapadd.h  stereo.cpp  stereo.h  ui.cpp  ui.h  usacdec_const.h
src/libMpeghDec/src/arm/: block_arm.cpp  fdp_arm.cpp  ltp_post_arm.cpp  mct_arm.cpp  stereo_arm.cpp
src/libMpeghUIMan/: CMakeLists.txt
src/libMpeghUIMan/src/: mpeghUIManager.cpp
src/libPCMutils/: CMakeLists.txt
src/libPCMutils/include/: limiter.h  pcm_utils.h
src/libPCMutils/src/: limiter.cpp  pcm_utils.cpp  version.h
src/libPCMutils/src/arm/: limiter_arm.cpp  pcm_utils_arm.cpp
src/libSYS/: CMakeLists.txt
src/libSYS/include/: FDK_audio.h  cmdl_parser.h  genericStds.h  wav_file.h
src/libSYS/src/: cmdl_parser.cpp  genericStds.cpp  wav_file.cpp
src/libUIManager/: CMakeLists.txt
src/libUIManager/include/: uiManager.h
src/libUIManager/src/: uiManager.cpp  uiManagerInternal.h  uiPersistence.cpp  uiPersistence.h  uiXml.cpp  uiXml.h
src/libgVBAPRenderer/: CMakeLists.txt
src/libgVBAPRenderer/include/: cartesianMath.h  gVBAPRenderer.h  quickHull.h  tables.h  vbap_core.h
src/libgVBAPRenderer/src/: cartesianMath.cpp  gVBAPRenderer.cpp  quickHull.cpp  tables.cpp  vbap_core.cpp
src/libgVBAPRenderer/src/arm/: gVBAPRenderer_arm.cpp
